--- a/.travis.yml
+++ b/.travis.yml
@@ -1,2 +1,4 @@
 language: csharp
 solution: QL.Exo1/QaliteLogiciel.sln
+after_script:
+  - nunit-console QL.Exo1/QL.Exo1.Tests/bin/Debug/QL.Exo1.Tests.dll
