--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,8 @@
 language: csharp
 solution: QL.Exo1/QaliteLogiciel.sln
-before_install:
-  - sudo apt-get install nunit-console
-after_script:
-  - nunit-console QL.Exo1/QL.Exo1.Tests/bin/Debug/QL.Exo1.Tests.dll
+install:
+  - nuget restore QL.Exo1/QaliteLogiciel.sln
+  - nuget install NUnit.Runners -Version 2.6.4 -OutputDirectory testrunner
+script:
+  - xbuild /p:Configuration=Release QL.Exo1/QaliteLogiciel.sln
+  - mono ./testrunner/NUnit.Runners.2.6.4/tools/nunit-console.exe ./QL.Exo1.Tests/bin/Debug/QL.Exo1.Tests.dll
