modify .travis.yml to run test

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,5 +4,5 @@ install:
   - nuget restore QL.Exo1/QaliteLogiciel.sln
   - nuget install NUnit.Runners -Version 2.6.4 -OutputDirectory testrunner
 script:
-  - xbuild /p:Configuration=Release QL.Exo1/QaliteLogiciel.sln
+  - xbuild /p:Configuration=Debug QL.Exo1/QaliteLogiciel.sln
   - mono ./testrunner/NUnit.Runners.2.6.4/tools/nunit-console.exe ./QL.Exo1/QL.Exo1.Tests/bin/Debug/QL.Exo1.Tests.dll
