--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,7 @@ solution: QL.Exo1/QaliteLogiciel.sln
 install:
   - nuget restore QL.Exo1/QaliteLogiciel.sln
   - nuget install NUnit.Runners -Version 2.6.4 -OutputDirectory testrunner
+  - sudo apt install msbuild
 script:
-  - MSBuild /p:Configuration=Debug QL.Exo1/QaliteLogiciel.sln
+  - msbuild QL.Exo1/QaliteLogiciel.sln
   - mono ./testrunner/NUnit.Runners.2.6.4/tools/nunit-console.exe ./QL.Exo1/QL.Exo1.Tests/bin/Debug/QL.Exo1.Tests.dll
